--- a/Traveller.UI/WebUI.csproj
+++ b/Traveller.UI/WebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,10 +12,6 @@
     <None Remove="Pages\Shared\_Layout2.cshtml.css" />
   </ItemGroup>
 
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="wwwroot\html\traveler\WorkItemDetail.html" />
-    <_ContentIncludedByDefault Remove="wwwroot\Layout2\images\bubbles_bk_bg.jpg" />
-  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="Pages\Shared\_Layout2.cshtml.css" />
