--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -19,7 +19,7 @@
   },
   "ConnectionStrings": {
     "DBCONN": "",
-    "AppKeyPath": "F:\\VNC\\Projects\\GIT\\VNC\\Template\\WebAPI\\Client\\VNC.bmp",
+    "AppKeyPath": "C:\\Users\\Xero\\source\\repos\\BaseTemplate\\WebAPI\\Client\\VNC.bmp",
     "PrintConnectionString": "N"
   },
   "AllowedHosts": "*"
