--- a/NotificationService/App.config
+++ b/NotificationService/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <add key="ServiceFrequencyInMins" value="1"/>
-    <add key="AppKeyPath" value="D:\\GIT\\Template\\SystelTechnologies.bmp"/>
+    <add key="AppKeyPath" value="C:\\Users\\Xero\\source\\repos\\BaseTemplate\\WebAPI\\Client\\VNC.bmp"/>
     <add key="DBConn" value=""/>
     <add key="ServiceDocPath" value="D:\\Application\\EmailNotification"/>
     <add key="RandomStringLength" value="10"/>
