--- a/PushNotifications/App.config
+++ b/PushNotifications/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="AppKeyPath" value="D:\GIT\Template\SystelTechnologies.bmp"/>
+		<add key="AppKeyPath" value="C:\\Users\\Xero\\source\\repos\\BaseTemplate\\WebAPI\\Client\\VNC.bmp"/>
 	</appSettings>
 </configuration>
