--- a/AngularClient/package.json
+++ b/AngularClient/package.json
@@ -30,6 +30,8 @@
     "bootstrap": "^4.6.2",
     "datatables.net": "^1.13.10",
     "datatables.net-bs4": "^1.11.3",
+    "datatables.net-buttons": "^3.0.0",
+    "datatables.net-buttons-dt": "^3.0.0",
     "datatables.net-dt": "^1.13.10",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
@@ -37,6 +39,7 @@
     "google-charts": "^2.0.0",
     "highcharts": "^11.1.0",
     "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "ngx-skeleton-loader": "^8.1.0",
     "ngx-toastr": "^17.0.2",
@@ -51,6 +54,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/datatables.net": "^1.10.28",
+    "@types/datatables.net-buttons": "^1.4.10",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.6.0",
