--- a/AngularClient/angular.json
+++ b/AngularClient/angular.json
@@ -40,10 +40,7 @@
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/css/Bootstrap.min.css",
               "src/assets/richtexteditor/rte_theme_default.css",
-              "src/assets/datatable/jquery_datatable.min.css",
-              "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
-              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "node_modules/datatables.net-buttons-dt/css/buttons.dataTables.css"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
 
             ],
             "scripts": [
@@ -56,20 +53,10 @@
               "src/assets/js/wow.min.js",
               "src/assets/js/jquery-ui-1.13.2.js",
               "node_modules/google-charts/dist/googleCharts.js",
-              "src/assets/richtexteditor/rte.js",
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/datatables.net-dt/js/dataTables.dataTables.js",
-              "node_modules/datatables.net/js/jquery.dataTables.min.js",
-              "node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js",
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js",
-              "node_modules/jszip/dist/jszip.js",
-              "node_modules/datatables.net-buttons/js/dataTables.buttons.js",
-              "node_modules/datatables.net-buttons/js/buttons.colVis.js",
-              "node_modules/datatables.net-buttons/js/buttons.flash.js",
-              "node_modules/datatables.net-buttons/js/buttons.html5.js",
-              "node_modules/datatables.net-buttons/js/buttons.print.js"
+              "src/assets/richtexteditor/rte.js"
+
             ]
+            
           },
           "configurations": {
             "stage": {
