--- a/AngularClient/package.json
+++ b/AngularClient/package.json
@@ -23,26 +23,26 @@
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.8",
-    "angular-datatables": "^17.0.0",
     "angular-highcharts": "^16.0.0",
     "bootstrap": "^4.6.2",
-    "datatables.net": "^1.13.10",
-    "datatables.net-bs4": "^1.11.3",
-    "datatables.net-buttons": "^3.0.0",
-    "datatables.net-buttons-dt": "^3.0.0",
-    "datatables.net-dt": "^1.13.10",
+    "bootstrap-icons": "^1.11.3",
+    "crypto-browserify": "^3.12.0",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "fontawesome-4.7": "^4.7.0",
     "google-charts": "^2.0.0",
     "highcharts": "^11.1.0",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
-    "jszip": "^3.10.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "ngx-skeleton-loader": "^8.1.0",
     "ngx-toastr": "^17.0.2",
+    "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
@@ -57,6 +57,7 @@
     "@types/datatables.net-buttons": "^1.4.10",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
+    "@types/jspdf": "^2.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
