basic validations, environment changes

--- a/AngularClient/angular.json
+++ b/AngularClient/angular.json
@@ -89,7 +89,7 @@
               "namedChunks": true
             }
           },
-          "defaultConfiguration": "stage"
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
